--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.14.0",
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
+    "axios": "^0.21.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
