--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
+    "react-navigation": "^4.4.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.8",
     "typescript": "^4.1.2",
