--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,8 @@
     "celebrate": "^13.0.4",
     "express": "^4.17.1",
     "react": "^17.0.1",
+    "react-activity": "^1.2.2",
+    "react-activity-indicator": "^0.7.77",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-navigation": "^4.4.3",
