--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.0",
     "celebrate": "^13.0.4",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
     "react": "^17.0.1",
     "react-activity": "^1.2.2",
     "react-activity-indicator": "^0.7.77",
@@ -26,7 +27,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --allowSyntheticDefaultImports",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@types/express": "^4.17.9"
+    "@types/express": "^4.17.9",
+    "@types/jquery": "^3.5.5"
   }
 }
