--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "react-navigation": "^4.4.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.8",
+    "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
-    "@types/jquery": "^3.5.5"
+    "@types/jquery": "^3.5.5",
+    "@types/styled-components": "^5.1.7"
   }
 }
