--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "react-activity": "^1.2.2",
     "react-activity-indicator": "^0.7.77",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.3.1",
     "react-html-parser": "^2.0.2",
     "react-icons": "^3.11.0",
     "react-navigation": "^4.4.3",
