--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "celebrate": "^13.0.4",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-activity": "^1.2.2",
     "react-activity-indicator": "^0.7.77",
@@ -28,7 +29,7 @@
     "react-navigation": "^4.4.3",
     "react-responsive-carousel": "^3.2.11",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^2.1.8",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
