--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "Server",
+  "name": "Server Brain",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev": "env-cmd -f ./.env.dev ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "build": "env-cmd -f ./.env.prod react-scripts build"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +29,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.9",
     "@types/password-hash": "^1.2.20",
+    "env-cmd": "^10.1.0",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2"
